[metadata]

name = aquabuoy
description=Python port for the original MATLAB code used in the Aquabuoy project
url=https://github.com/nrrcastillo/aquabuoy-code
author=Nicolas Castillo
author_email=ncastillo@seattleu.edu


version = "1.0.0"

[options]
package_dir=
    =aquabuoy

[options.packages.find]
where=aquabuoy


